2002-12-10  Mikael Djurfeldt  <mdj@kvast.blakulla.net>

	* gc-malloc.c (malloc_mutex): New mutex.
	(scm_gc_init_malloc): Initialize it.
	(scm_realloc): Serialize call to realloc
	(scm_calloc): Same for calloc.
	Thanks to Wolfgang Jaehrling!
	(Now we have to make sure all calls to malloc/realloc are made
	through scm_malloc.)

	* threads.c (really_launch): Release heap (to prevent deadlock).
	(create_thread): Release heap before locking thread admin mutex.

2002-12-10  Mikael Djurfeldt  <mdj@kvast.blakulla.net>

	* threads.c (scm_i_thread_invalidate_freelists): New
	function.

	* gc.c (scm_igc): Call scm_i_thread_invalidate_freelists.

	* modules.c (scm_export): Inserted a return statement.

2002-12-10  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* modules.c (scm_export): new function

	* gc-card.c: add a note about malloc()/free() overhead.

2002-12-10  Mikael Djurfeldt  <mdj@kvast.blakulla.net>

	* Makefile.am (c-tokenize.$(OBJEXT)): Don't look for c-tokenize.c
	in srcdir.

2002-12-10  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	These changes remove scm_ints_disabled (which hasn't has any
	effect in Guile for quite some time).
	
	* async.c, error.h (scm_ints_disabled): Removed.

	* gc.c (scm_gc_for_newcell), init.c (scm_init_guile_1),
	root.c (scm_internal_cwdr), gdbint.c (SCM_BEGIN_FOREIGN_BLOCK,
	SCM_END_FOREIGN_BLOCK): Don't touch scm_ints_disabled.
	(old_ints): Removed.

	* __scm.h (SCM_DEFER_INTS, SCM_ALLOW_INTS): Define as a recursive
	critical section.
	(SCM_REDEFER_INTS, SCM_ALLOW_INTS): Define as SCM_DEFER_INTS and
	SCM_ALLOW_INTS.

2002-12-09  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* threads.c (scm_mutex_lock, scm_cond_wait, scm_cond_timedwait):
	Removed accidental #if 0 around these functions.

	These changes are the start of support for preemptive
	multithreading.  Marius and I have agreed that I commit this code
	into the repository although it isn't thoroughly tested and surely
	introduces many bugs.  The bugs should only be exposed when using