@@ -1,12 +1,16 @@
 2002-12-10  Mikael Djurfeldt  <mdj@kvast.blakulla.net>
 
+	* gc-malloc.c, gc.h (scm_gc_malloc_prehistory): New function.
+
 	* gc-malloc.c (malloc_mutex): New mutex.
-	(scm_gc_init_malloc): Initialize it.
+	(scm_gc_malloc_prehistory): Initialize it.
 	(scm_realloc): Serialize call to realloc
 	(scm_calloc): Same for calloc.
 	Thanks to Wolfgang Jaehrling!
 	(Now we have to make sure all calls to malloc/realloc are made
 	through scm_malloc.)
+
+	* init.c (scm_init_guile_1): Call scm_gc_malloc_prehistory.
 
 	* threads.c (really_launch): Release heap (to prevent deadlock).
 	(create_thread): Release heap before locking thread admin mutex.
